<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">定位精度评估</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_zh">开始</string>
    <string name="stop_zh">停止</string>
    <string name="eval_zh">评估</string>
    <string name="title_activity_select_ap">SelectApActivity</string>
    <string name="done_zh">确认</string>
    <string name="hint_zh">请输入面积</string>
    <string name="times_zh">点击开始采集</string>

</resources>
